--- a/settings/settings.json
+++ b/settings/settings.json
@@ -1,54 +1,4 @@
 {
-  "locks": [
-    {
-      "name": "TAS",
-      "skip": false
-    },
-    {
-      "name": "SYNCHRONIZED",
-      "skip": false
-    },
-    {
-      "name": "TTAS",
-      "skip": false
-    },
-    {
-      "name": "MCS",
-      "skip": false
-    },
-    {
-      "name": "FAIR_REENTRANT",
-      "skip": false
-    },
-    {
-      "name": "UNFAIR_REENTRANT",
-      "skip": false
-    },
-    {
-      "name": "CNA_NUMA",
-      "skip": false
-    },
-    {
-      "name": "HCLH_NUMA",
-      "skip": false
-    },
-    {
-      "name": "HMCS_CCL_NUMA",
-      "skip": false
-    },
-    {
-      "name": "HMCS_CCL_NUMA_SUPERNUMA",
-      "skip": false
-    },
-    {
-      "name": "HMCS_NUMA",
-      "skip": false
-    },
-    {
-      "name": "HMCS_CUSTOM",
-      "skip": false
-    }
-  ],
   "benches": [
     {
       "name": "consumeCpu",
@@ -61,7 +11,45 @@
         "forks": 1,
         "yieldsBefore": 1,
         "title": "Высокая конкуренция. Внутренняя ~3000 нс. Внешняя работа отсутствует. 1 точка переключения",
-        "skip": true
+        "skip": true,
+        "locks": [
+          {
+            "name": "TAS"
+          },
+          {
+            "name": "SYNCHRONIZED"
+          },
+          {
+            "name": "TTAS"
+          },
+          {
+            "name": "MCS"
+          },
+          {
+            "name": "FAIR_REENTRANT"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "CNA_NUMA"
+          },
+          {
+            "name": "HCLH_NUMA"
+          },
+          {
+            "name": "HMCS_CCL_NUMA"
+          },
+          {
+            "name": "HMCS_CCL_NUMA_SUPERNUMA"
+          },
+          {
+            "name": "HMCS_NUMA"
+          },
+          {
+            "name": "HMCS_CUSTOM"
+          }
+        ]
       }
     },
     {
@@ -76,7 +64,45 @@
         "forks": 1,
         "yieldsBefore": 2,
         "title": "Низкая конкуренция. Внутренняя ~3000 нс. Внешняя работа в 128 раз больше внутренней. 2 точки переключения",
-        "skip": true
+        "skip": true,
+        "locks": [
+          {
+            "name": "TAS"
+          },
+          {
+            "name": "SYNCHRONIZED"
+          },
+          {
+            "name": "TTAS"
+          },
+          {
+            "name": "MCS"
+          },
+          {
+            "name": "FAIR_REENTRANT"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "CNA_NUMA"
+          },
+          {
+            "name": "HCLH_NUMA"
+          },
+          {
+            "name": "HMCS_CCL_NUMA"
+          },
+          {
+            "name": "HMCS_CCL_NUMA_SUPERNUMA"
+          },
+          {
+            "name": "HMCS_NUMA"
+          },
+          {
+            "name": "HMCS_CUSTOM"
+          }
+        ]
       }
     },
     {
@@ -90,7 +116,45 @@
         "forks": 1,
         "yieldsBefore": 2,
         "title": "Высокая конкуренция. Внешняя секция == внутренней секции == ~3000 нс. 2 точки переключения вне",
-        "skip": true
+        "skip": true,
+        "locks": [
+          {
+            "name": "TAS"
+          },
+          {
+            "name": "SYNCHRONIZED"
+          },
+          {
+            "name": "TTAS"
+          },
+          {
+            "name": "MCS"
+          },
+          {
+            "name": "FAIR_REENTRANT"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "CNA_NUMA"
+          },
+          {
+            "name": "HCLH_NUMA"
+          },
+          {
+            "name": "HMCS_CCL_NUMA"
+          },
+          {
+            "name": "HMCS_CCL_NUMA_SUPERNUMA"
+          },
+          {
+            "name": "HMCS_NUMA"
+          },
+          {
+            "name": "HMCS_CUSTOM"
+          }
+        ]
       }
     },
     {
@@ -113,7 +177,45 @@
         ],
         "yieldsBefore": 2,
         "title": "Очень много потоков. Низкая конкуренция.Внутри ~3000.Внешняя в 128 раз больше. 2 yield.",
-        "skip": false
+        "skip": false,
+        "locks": [
+          {
+            "name": "TAS"
+          },
+          {
+            "name": "SYNCHRONIZED"
+          },
+          {
+            "name": "TTAS"
+          },
+          {
+            "name": "MCS"
+          },
+          {
+            "name": "FAIR_REENTRANT"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "CNA_NUMA"
+          },
+          {
+            "name": "HCLH_NUMA"
+          },
+          {
+            "name": "HMCS_CCL_NUMA"
+          },
+          {
+            "name": "HMCS_CCL_NUMA_SUPERNUMA"
+          },
+          {
+            "name": "HMCS_NUMA"
+          },
+          {
+            "name": "HMCS_CUSTOM"
+          }
+        ]
       }
     }
   ]
