--- a/settings/settings.json
+++ b/settings/settings.json
@@ -15,6 +15,39 @@
         "locks": [
           {
             "name": "TAS"
+          },
+          {
+            "name": "SYNCHRONIZED"
+          },
+          {
+            "name": "TTAS"
+          },
+          {
+            "name": "MCS"
+          },
+          {
+            "name": "FAIR_REENTRANT"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "CNA_NUMA"
+          },
+          {
+            "name": "HCLH_NUMA"
+          },
+          {
+            "name": "HMCS_CCL_NUMA"
+          },
+          {
+            "name": "HMCS_CCL_NUMA_SUPERNUMA"
+          },
+          {
+            "name": "HMCS_NUMA"
+          },
+          {
+            "name": "HMCS_CUSTOM"
           }
         ]
       }
@@ -83,7 +116,7 @@
         "forks": 1,
         "yieldsBefore": 2,
         "title": "Высокая конкуренция. Внешняя секция == внутренней секции == ~3000 нс. 2 точки переключения вне",
-        "skip": true,
+        "skip": false,
         "locks": [
           {
             "name": "TAS"
@@ -144,7 +177,7 @@
         ],
         "yieldsBefore": 2,
         "title": "Очень много потоков. Низкая конкуренция.Внутри ~3000.Внешняя в 128 раз больше. 2 yield.",
-        "skip": true,
+        "skip": false,
         "locks": [
           {
             "name": "TAS"
