--- a/settings/settings.json
+++ b/settings/settings.json
@@ -11,7 +11,7 @@
         "forks": 1,
         "yieldsBefore": 1,
         "title": "Высокая конкуренция. Внутренняя ~3000 нс. Внешняя работа отсутствует. 1 точка переключения",
-        "skip": true,
+        "skip": false,
         "locks": [
           {
             "name": "TAS"
@@ -64,7 +64,7 @@
         "forks": 1,
         "yieldsBefore": 2,
         "title": "Низкая конкуренция. Внутренняя ~3000 нс. Внешняя работа в 128 раз больше внутренней. 2 точки переключения",
-        "skip": true,
+        "skip": false,
         "locks": [
           {
             "name": "TAS"
@@ -116,7 +116,7 @@
         "forks": 1,
         "yieldsBefore": 2,
         "title": "Высокая конкуренция. Внешняя секция == внутренней секции == ~3000 нс. 2 точки переключения вне",
-        "skip": true,
+        "skip": false,
         "locks": [
           {
             "name": "TAS"
