--- a/settings/settings.json
+++ b/settings/settings.json
@@ -61,7 +61,7 @@
         "forks": 1,
         "yieldsBefore": 2,
         "title": "Низкая конкуренция. Внутренняя ~3000 нс. Внешняя работа в 128 раз больше внутренней. 2 точки переключения",
-        "skip": false,
+        "skip": true,
         "locks": [
           {
             "name": "TAS"
@@ -110,7 +110,7 @@
         "forks": 1,
         "yieldsBefore": 2,
         "title": "Высокая конкуренция. Внешняя секция == внутренней секции == ~3000 нс. 2 точки переключения вне",
-        "skip": false,
+        "skip": true,
         "locks": [
           {
             "name": "TAS"
