--- a/settings/settings.json
+++ b/settings/settings.json
@@ -11,7 +11,7 @@
         "forks": 1,
         "yieldsBefore": 1,
         "title": "Высокая конкуренция. Внутренняя ~3000 нс. Внешняя работа отсутствует. 1 точка переключения",
-        "skip": false,
+        "skip": true,
         "locks": [
           {
             "name": "HMCS_NUMA_PARK"
@@ -37,34 +37,7 @@
             "name": "TAS"
           },
           {
-            "name": "SYNCHRONIZED"
-          },
-          {
-            "name": "TTAS"
-          },
-          {
-            "name": "MCS"
-          },
-          {
-            "name": "FAIR_REENTRANT"
-          },
-          {
-            "name": "UNFAIR_REENTRANT"
-          },
-          {
-            "name": "CNA_NUMA"
-          },
-          {
-            "name": "HCLH_NUMA"
-          },
-          {
-            "name": "HMCS_CCL_NUMA"
-          },
-          {
-            "name": "HMCS_CCL_NUMA_SUPERNUMA"
-          },
-          {
-            "name": "HMCS_NUMA"
+            "name": "HMCS_NUMA_PARK"
           }
         ]
       }
