--- a/settings/settings.json
+++ b/settings/settings.json
@@ -34,7 +34,7 @@
         "skip": true,
         "locks": [
           {
-            "name": "TAS"
+            "name": "UNFAIR_REENTRANT"
           },
           {
             "name": "HMCS_NUMA_PARK"
