--- a/settings/settings.json
+++ b/settings/settings.json
@@ -10,6 +10,7 @@
         "measurementIterations": 3,
         "forks": 1,
         "yieldsBefore": 1,
+        "threads": [48, 52, 56, 60],
         "title": "Высокая конкуренция. Внутренняя ~3000 нс. Внешняя работа отсутствует. 1 точка переключения",
         "skip": true,
         "locks": [
@@ -29,6 +30,7 @@
         "warmupIterations": 3,
         "measurementIterations": 3,
         "forks": 1,
+        "threads": [48, 52, 56, 60],
         "yieldsBefore": 2,
         "title": "Низкая конкуренция. Внутренняя ~3000 нс. Внешняя работа в 128 раз больше внутренней. 2 точки переключения",
         "skip": false,
