--- a/settings/settings.json
+++ b/settings/settings.json
@@ -10,12 +10,17 @@
         "measurementIterations": 3,
         "forks": 1,
         "yieldsBefore": 1,
-        "threads": [48, 52, 56, 60],
+        "threads": [
+          4,
+          8,
+          16,
+          24
+        ],
         "title": "Высокая конкуренция. Внутренняя ~3000 нс. Внешняя работа отсутствует. 1 точка переключения",
-        "skip": true,
+        "skip": false,
         "locks": [
           {
-            "name": "HMCS_NUMA_PARK"
+            "name": "LOCAL_REENTRANT"
           }
         ]
       }
@@ -30,13 +35,18 @@
         "warmupIterations": 3,
         "measurementIterations": 3,
         "forks": 1,
-        "threads": [48, 52, 56, 60],
+        "threads": [
+          4,
+          8,
+          16,
+          24
+        ],
         "yieldsBefore": 2,
         "title": "Низкая конкуренция. Внутренняя ~3000 нс. Внешняя работа в 128 раз больше внутренней. 2 точки переключения",
         "skip": false,
         "locks": [
           {
-            "name": "CNA_NUMA_PARK"
+            "name": "LOCAL_REENTRANT"
           }
         ]
       }
