--- a/settings/settings.json
+++ b/settings/settings.json
@@ -6,13 +6,19 @@
         "actionsCount": 128000,
         "beforeCpuTokens": 0,
         "inCpuTokens": 1000,
-        "warmupIterations": 3,
-        "measurementIterations": 3,
-        "forks": 1,
+        "warmupIterations": 5,
+        "measurementIterations": 5,
+        "forks": 2,
         "yieldsBefore": 1,
         "title": "Высокая конкуренция",
         "skip": false,
         "locks": [
+          {
+            "name": "SOME_LOCK"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
           {
             "name": "FAIR_REENTRANT"
           }
@@ -25,22 +31,22 @@
         "actionsCount": 128000,
         "beforeCpuTokens": 0,
         "inCpuTokens": 1000,
-        "warmupIterations": 3,
-        "measurementIterations": 3,
-        "forks": 1,
+        "warmupIterations": 5,
+        "measurementIterations": 5,
+        "forks": 2,
         "yieldsBefore": 1,
         "yieldInCrit": true,
         "title": "Высокая конкуренция. Внутри yield.",
-        "skip": true,
+        "skip": false,
         "locks": [
           {
+            "name": "SOME_LOCK"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
             "name": "FAIR_REENTRANT"
-          },
-          {
-            "name": "CUSTOM_HMCS"
-          },
-          {
-            "name": "SYNCHRONIZED"
           }
         ]
       }
@@ -52,14 +58,20 @@
         "beforeCpuTokens": 128000,
         "inCpuTokens": 1000,
         "threadsFrom": 4,
-        "warmupIterations": 3,
-        "measurementIterations": 3,
-        "forks": 1,
+        "warmupIterations": 5,
+        "measurementIterations": 5,
+        "forks": 2,
         "yieldsBefore": 2,
         "title": "Низкая конкуренция.",
         "skip": false,
         "locks": [
           {
+            "name": "SOME_LOCK"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
             "name": "FAIR_REENTRANT"
           }
         ]
@@ -68,26 +80,26 @@
     {
       "name": "consumeCpu",
       "payload": {
-        "actionsCount": 128000,
+        "actionsCount": 2000,
         "beforeCpuTokens": 128000,
         "inCpuTokens": 1000,
         "threadsFrom": 4,
-        "warmupIterations": 3,
-        "measurementIterations": 3,
-        "forks": 1,
+        "warmupIterations": 5,
+        "measurementIterations": 5,
+        "forks": 2,
         "yieldsBefore": 2,
         "title": "Низкая конкуренция. Внутри yield.",
         "yieldInCrit": true,
-        "skip": true,
+        "skip": false,
         "locks": [
+          {
+            "name": "SOME_LOCK"
+          },
           {
             "name": "UNFAIR_REENTRANT"
           },
           {
-            "name": "CUSTOM_HMCS"
-          },
-          {
-            "name": "SYNCHRONIZED"
+            "name": "FAIR_REENTRANT"
           }
         ]
       }
