--- a/settings/settings.json
+++ b/settings/settings.json
@@ -10,34 +10,9 @@
         "measurementIterations": 5,
         "forks": 2,
         "yieldsBefore": 1,
-        "title": "Высокая конкуренция",
-        "skip": false,
-        "locks": [
-          {
-            "name": "SOME_LOCK"
-          },
-          {
-            "name": "UNFAIR_REENTRANT"
-          },
-          {
-            "name": "FAIR_REENTRANT"
-          }
-        ]
-      }
-    },
-    {
-      "name": "consumeCpu",
-      "payload": {
-        "actionsCount": 128000,
-        "beforeCpuTokens": 0,
-        "inCpuTokens": 1000,
-        "warmupIterations": 5,
-        "measurementIterations": 5,
-        "forks": 2,
-        "yieldsBefore": 1,
         "yieldInCrit": true,
         "title": "Высокая конкуренция. Внутри yield.",
-        "skip": false,
+        "skip": true,
         "locks": [
           {
             "name": "SOME_LOCK"
@@ -58,35 +33,9 @@
         "beforeCpuTokens": 128000,
         "inCpuTokens": 1000,
         "threadsFrom": 4,
-        "warmupIterations": 5,
-        "measurementIterations": 5,
-        "forks": 2,
-        "yieldsBefore": 2,
-        "title": "Низкая конкуренция.",
-        "skip": false,
-        "locks": [
-          {
-            "name": "SOME_LOCK"
-          },
-          {
-            "name": "UNFAIR_REENTRANT"
-          },
-          {
-            "name": "FAIR_REENTRANT"
-          }
-        ]
-      }
-    },
-    {
-      "name": "consumeCpu",
-      "payload": {
-        "actionsCount": 2000,
-        "beforeCpuTokens": 128000,
-        "inCpuTokens": 1000,
-        "threadsFrom": 4,
-        "warmupIterations": 5,
-        "measurementIterations": 5,
-        "forks": 2,
+        "warmupIterations": 3,
+        "measurementIterations": 3,
+        "forks": 1,
         "yieldsBefore": 2,
         "title": "Низкая конкуренция. Внутри yield.",
         "yieldInCrit": true,
