--- a/settings/settings.json
+++ b/settings/settings.json
@@ -11,7 +11,7 @@
         "forks": 2,
         "yieldsBefore": 1,
         "yieldInCrit": true,
-        "title": "Высокая конкуренция. Внутри yield.",
+        "title": "ConsumeCPU. High contention.",
         "skip": true,
         "locks": [
           {
@@ -37,8 +37,31 @@
         "measurementIterations": 3,
         "forks": 1,
         "yieldsBefore": 2,
-        "title": "Низкая конкуренция. Внутри yield.",
+        "title": "ConsumeCPU. Low contention.",
         "yieldInCrit": true,
+        "skip": true,
+        "locks": [
+          {
+            "name": "NUMA_MCS"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "FAIR_REENTRANT"
+          }
+        ]
+      }
+    },
+    {
+      "name": "priority-queue",
+      "payload": {
+        "actionsCount": 128000,
+        "threadsFrom": 4,
+        "warmupIterations": 3,
+        "measurementIterations": 3,
+        "forks": 1,
+        "title": "Priority queue. 128000 operations.",
         "skip": false,
         "locks": [
           {
