--- a/settings/settings.json
+++ b/settings/settings.json
@@ -15,10 +15,13 @@
         "skip": false,
         "locks": [
           {
-            "name": "NUMA_MCS_NO_YIELD"
+            "name": "NUMA_MCS"
           },
           {
-            "name": "NUMA_MCS_CCL_NO_YIELD"
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "FAIR_REENTRANT"
           }
         ]
       }
@@ -36,7 +39,7 @@
         "yieldsBefore": 2,
         "title": "ConsumeCPU. Low contention.",
         "yieldInCrit": true,
-        "skip": false,
+        "skip": true,
         "locks": [
           {
             "name": "NUMA_MCS_NO_YIELD"
@@ -56,7 +59,7 @@
         "measurementIterations": 5,
         "forks": 2,
         "title": "Priority queue. 128000 operations.",
-        "skip": false,
+        "skip": true,
         "locks": [
           {
             "name": "NUMA_MCS_NO_YIELD"
