--- a/settings/settings.json
+++ b/settings/settings.json
@@ -6,9 +6,9 @@
         "actionsCount": 64000,
         "beforeCpuTokens": 0,
         "inCpuTokens": 1000,
-        "warmupIterations": 5,
-        "measurementIterations": 5,
-        "forks": 2,
+        "warmupIterations": 3,
+        "measurementIterations": 3,
+        "forks": 1,
         "yieldsBefore": 1,
         "yieldInCrit": true,
         "title": "ConsumeCPU. High contention.",
@@ -16,6 +16,12 @@
         "locks": [
           {
             "name": "NUMA_MCS"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "FAIR_REENTRANT"
           }
         ]
       }
@@ -27,14 +33,23 @@
         "beforeCpuTokens": 128000,
         "inCpuTokens": 1000,
         "threadsFrom": 4,
-        "warmupIterations": 5,
-        "measurementIterations": 5,
-        "forks": 2,
+        "warmupIterations": 3,
+        "measurementIterations": 3,
+        "forks": 1,
         "yieldsBefore": 2,
         "title": "ConsumeCPU. Low contention.",
         "yieldInCrit": true,
-        "skip": true,
+        "skip": false,
         "locks": [
+          {
+            "name": "NUMA_MCS"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "FAIR_REENTRANT"
+          }
         ]
       }
     },
@@ -43,12 +58,21 @@
       "payload": {
         "actionsCount": 64000,
         "threadsFrom": 4,
-        "warmupIterations": 5,
-        "measurementIterations": 5,
-        "forks": 2,
+        "warmupIterations": 3,
+        "measurementIterations": 3,
+        "forks": 1,
         "title": "Priority queue. 128000 operations.",
-        "skip": true,
+        "skip": false,
         "locks": [
+          {
+            "name": "NUMA_MCS"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "FAIR_REENTRANT"
+          }
         ]
       }
     }
