--- a/settings/settings.json
+++ b/settings/settings.json
@@ -15,13 +15,7 @@
         "skip": false,
         "locks": [
           {
-            "name": "NUMA_MCS"
-          },
-          {
-            "name": "UNFAIR_REENTRANT"
-          },
-          {
-            "name": "FAIR_REENTRANT"
+            "name": "NUMA_MCS_RUN_ON_THIS_CARRIER_FEATURE_ENABLED"
           }
         ]
       }
@@ -42,13 +36,7 @@
         "skip": false,
         "locks": [
           {
-            "name": "NUMA_MCS"
-          },
-          {
-            "name": "UNFAIR_REENTRANT"
-          },
-          {
-            "name": "FAIR_REENTRANT"
+            "name": "NUMA_MCS_RUN_ON_THIS_CARRIER_FEATURE_ENABLED"
           }
         ]
       }
@@ -65,13 +53,7 @@
         "skip": false,
         "locks": [
           {
-            "name": "NUMA_MCS"
-          },
-          {
-            "name": "UNFAIR_REENTRANT"
-          },
-          {
-            "name": "FAIR_REENTRANT"
+            "name": "NUMA_MCS_RUN_ON_THIS_CARRIER_FEATURE_ENABLED"
           }
         ]
       }
