--- a/settings/settings.json
+++ b/settings/settings.json
@@ -74,6 +74,12 @@
         "locks": [
           {
             "name": "NUMA_MCS"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "FAIR_REENTRANT"
           }
         ]
       }
