--- a/settings/settings.json
+++ b/settings/settings.json
@@ -6,9 +6,9 @@
         "actionsCount": 64000,
         "beforeCpuTokens": 0,
         "inCpuTokens": 1000,
-        "warmupIterations": 10,
-        "measurementIterations": 10,
-        "forks": 4,
+        "warmupIterations": 1,
+        "measurementIterations": 1,
+        "forks": 1,
         "yieldsBefore": 1,
         "yieldInCrit": true,
         "title": "ConsumeCPU. High contention.",
@@ -33,9 +33,9 @@
         "beforeCpuTokens": 128000,
         "inCpuTokens": 1000,
         "threadsFrom": 4,
-        "warmupIterations": 10,
-        "measurementIterations": 10,
-        "forks": 4,
+        "warmupIterations": 1,
+        "measurementIterations": 1,
+        "forks": 1,
         "yieldsBefore": 2,
         "title": "ConsumeCPU. Low contention.",
         "yieldInCrit": true,
@@ -54,21 +54,12 @@
       }
     },
     {
-      "name": "dijkstra",
+      "name": "text",
       "payload": {
-        "nodesCnt": 1000,
-        "probabilityOfEdge": 0.1,
-        "warmupIterations": 10,
-        "measurementIterations": 10,
-        "forks": 2,
-        "threads": [
-          8,
-          24,
-          48,
-          96
-        ],
-        "threadsFrom": 4,
-        "title": "Dijkstra.",
+        "warmupIterations": 1,
+        "measurementIterations": 1,
+        "forks": 1,
+        "title": "Text statistics.",
         "skip": false,
         "locks": [
           {
