--- a/settings/settings.json
+++ b/settings/settings.json
@@ -6,13 +6,13 @@
         "actionsCount": 64000,
         "beforeCpuTokens": 0,
         "inCpuTokens": 1000,
-        "warmupIterations": 1,
-        "measurementIterations": 1,
-        "forks": 1,
+        "warmupIterations": 10,
+        "measurementIterations": 10,
+        "forks": 4,
         "yieldsBefore": 1,
         "yieldInCrit": true,
         "title": "ConsumeCPU. High contention.",
-        "skip": true,
+        "skip": false,
         "locks": [
           {
             "name": "NUMA_MCS"
@@ -33,13 +33,13 @@
         "beforeCpuTokens": 128000,
         "inCpuTokens": 1000,
         "threadsFrom": 4,
-        "warmupIterations": 1,
-        "measurementIterations": 1,
-        "forks": 1,
+        "warmupIterations": 10,
+        "measurementIterations": 10,
+        "forks": 4,
         "yieldsBefore": 2,
         "title": "ConsumeCPU. Low contention.",
         "yieldInCrit": true,
-        "skip": true,
+        "skip": false,
         "locks": [
           {
             "name": "NUMA_MCS"
@@ -56,9 +56,9 @@
     {
       "name": "text",
       "payload": {
-        "warmupIterations": 1,
-        "measurementIterations": 1,
-        "forks": 1,
+        "warmupIterations": 10,
+        "measurementIterations": 10,
+        "forks": 4,
         "title": "Text statistics.",
         "skip": false,
         "locks": [
