--- a/fatjar/settings/settings.json
+++ b/fatjar/settings/settings.json
@@ -3,16 +3,23 @@
     {
       "name": "consumeCpu",
       "payload": {
-        "actionsCount": 128000,
+        "actionsCount": 64000,
         "beforeCpuTokens": 0,
         "inCpuTokens": 1000,
-        "warmupIterations": 3,
-        "measurementIterations": 3,
-        "forks": 1,
+        "warmupIterations": 7,
+        "measurementIterations": 7,
+        "forks": 3,
         "yieldsBefore": 1,
-        "title": "Высокая конкуренция",
+        "yieldInCrit": true,
+        "title": "ConsumeCPU. High contention.",
         "skip": true,
         "locks": [
+          {
+            "name": "NUMA_MCS"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
           {
             "name": "FAIR_REENTRANT"
           }
@@ -22,37 +29,24 @@
     {
       "name": "consumeCpu",
       "payload": {
-        "actionsCount": 128000,
-        "beforeCpuTokens": 0,
-        "inCpuTokens": 1000,
-        "warmupIterations": 3,
-        "measurementIterations": 3,
-        "forks": 1,
-        "yieldsBefore": 1,
-        "yieldInCrit": true,
-        "title": "Высокая конкуренция. Внутри yield.",
-        "skip": false,
-        "locks": [
-          {
-            "name": "SOME_LOCK"
-          }
-        ]
-      }
-    },
-    {
-      "name": "consumeCpu",
-      "payload": {
-        "actionsCount": 128000,
+        "actionsCount": 64000,
         "beforeCpuTokens": 128000,
         "inCpuTokens": 1000,
         "threadsFrom": 4,
-        "warmupIterations": 3,
-        "measurementIterations": 3,
-        "forks": 1,
+        "warmupIterations": 7,
+        "measurementIterations": 7,
+        "forks": 3,
         "yieldsBefore": 2,
-        "title": "Низкая конкуренция.",
+        "title": "ConsumeCPU. Low contention.",
+        "yieldInCrit": true,
         "skip": true,
         "locks": [
+          {
+            "name": "NUMA_MCS"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
           {
             "name": "FAIR_REENTRANT"
           }
@@ -60,22 +54,119 @@
       }
     },
     {
-      "name": "consumeCpu",
+      "name": "text",
       "payload": {
-        "actionsCount": 2000,
-        "beforeCpuTokens": 128000,
-        "inCpuTokens": 1000,
+        "warmupIterations": 7,
+        "measurementIterations": 7,
+        "forks": 3,
+        "title": "Text statistics.",
+        "skip": true,
+        "locks": [
+          {
+            "name": "NUMA_MCS"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "FAIR_REENTRANT"
+          }
+        ]
+      }
+    },
+    {
+      "name": "matrix",
+      "payload": {
+        "beforeMatrixSize": 0,
+        "inMatrixSize": 5000,
+        "actionsCount": 50000,
+        "warmupIterations": 2,
+        "measurementIterations": 2,
         "threadsFrom": 4,
-        "warmupIterations": 3,
-        "measurementIterations": 3,
-        "forks": 1,
-        "yieldsBefore": 2,
-        "title": "Низкая конкуренция. Внутри yield.",
-        "yieldInCrit": true,
+        "forks": 2,
+        "title": "Matrix mult, 5000x5000 in с.s, 0x0 out of c.s",
         "skip": false,
         "locks": [
           {
-            "name": "SOME_LOCK"
+            "name": "NUMA_MCS"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "FAIR_REENTRANT"
+          }
+        ]
+      }
+    },
+    {
+      "name": "matrix",
+      "payload": {
+        "beforeMatrixSize": 5000,
+        "inMatrixSize": 0,
+        "actionsCount": 50000,
+        "warmupIterations": 2,
+        "measurementIterations": 2,
+        "forks": 2,
+        "title": "Matrix mult, 0x0 in с.s, 5000x5000 out of c.s",
+        "skip": false,
+        "locks": [
+          {
+            "name": "NUMA_MCS"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "FAIR_REENTRANT"
+          }
+        ]
+      }
+    },
+    {
+      "name": "matrix",
+      "payload": {
+        "beforeMatrixSize": 80000,
+        "inMatrixSize": 5000,
+        "actionsCount": 50000,
+        "warmupIterations": 2,
+        "measurementIterations": 2,
+        "forks": 2,
+        "title": "Matrix mult, 5000x5000 in с.s, 80000x80000 out of c.s",
+        "skip": false,
+        "locks": [
+          {
+            "name": "NUMA_MCS"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "FAIR_REENTRANT"
+          }
+        ]
+      }
+    },
+    {
+      "name": "matrix",
+      "payload": {
+        "beforeMatrixSize": 5000,
+        "inMatrixSize": 5000,
+        "actionsCount": 50000,
+        "warmupIterations": 2,
+        "measurementIterations": 2,
+        "forks": 2,
+        "title": "Matrix mult, 5000x5000 in с.s, 5000x5000 out of c.s",
+        "skip": false,
+        "locks": [
+          {
+            "name": "NUMA_MCS"
+          },
+          {
+            "name": "UNFAIR_REENTRANT"
+          },
+          {
+            "name": "FAIR_REENTRANT"
           }
         ]
       }
