--- a/bench/settings/settings.json
+++ b/bench/settings/settings.json
@@ -60,7 +60,7 @@
         "measurementIterations": 7,
         "forks": 3,
         "title": "Text statistics.",
-        "skip": false,
+        "skip": true,
         "locks": [
           {
             "name": "NUMA_MCS"
@@ -85,7 +85,7 @@
         "threadsFrom": 4,
         "forks": 3,
         "title": "Matrix mult, 50x50 in с.s, 0x0 out of c.s",
-        "skip": false,
+        "skip": true,
         "locks": [
           {
             "name": "NUMA_MCS"
@@ -110,7 +110,7 @@
         "threadsFrom": 4,
         "forks": 3,
         "title": "Matrix mult, 100x100 in с.s, 0x0 out of c.s",
-        "skip": false,
+        "skip": true,
         "locks": [
           {
             "name": "NUMA_MCS"
@@ -135,7 +135,7 @@
         "threadsFrom": 4,
         "forks": 3,
         "title": "Matrix mult, 15x15 in с.s, 100x100 out of c.s",
-        "skip": false,
+        "skip": true,
         "locks": [
           {
             "name": "NUMA_MCS"
@@ -160,7 +160,7 @@
         "threadsFrom": 4,
         "forks": 3,
         "title": "Matrix mult, 100x100 in с.s, 100x100 out of c.s",
-        "skip": false,
+        "skip": true,
         "locks": [
           {
             "name": "NUMA_MCS"
