--- a/bench/settings/settings.json
+++ b/bench/settings/settings.json
@@ -6,22 +6,25 @@
         "actionsCount": 64000,
         "beforeCpuTokens": 0,
         "inCpuTokens": 1000,
-        "warmupIterations": 7,
-        "measurementIterations": 7,
-        "forks": 3,
+        "warmupIterations": 5,
+        "measurementIterations": 5,
+        "forks": 2,
         "yieldsBefore": 1,
         "yieldInCrit": true,
         "title": "ConsumeCPU. High contention.",
         "skip": false,
         "locks": [
           {
-            "name": "NUMA_MCS"
+            "name": "NUMA_MCS_QSPIN"
           },
           {
             "name": "UNFAIR_REENTRANT"
           },
           {
             "name": "FAIR_REENTRANT"
+          },
+          {
+            "name": "NUMA_MCS_QUEUE"
           }
         ]
       }
@@ -33,22 +36,25 @@
         "beforeCpuTokens": 128000,
         "inCpuTokens": 1000,
         "threadsFrom": 4,
-        "warmupIterations": 7,
-        "measurementIterations": 7,
-        "forks": 3,
+        "warmupIterations": 5,
+        "measurementIterations": 5,
+        "forks": 2,
         "yieldsBefore": 2,
         "title": "ConsumeCPU. Low contention.",
         "yieldInCrit": true,
         "skip": false,
         "locks": [
           {
-            "name": "NUMA_MCS"
+            "name": "NUMA_MCS_QSPIN"
           },
           {
             "name": "UNFAIR_REENTRANT"
           },
           {
             "name": "FAIR_REENTRANT"
+          },
+          {
+            "name": "NUMA_MCS_QUEUE"
           }
         ]
       }
