--- a/bench/settings/settings.json
+++ b/bench/settings/settings.json
@@ -6,25 +6,19 @@
         "actionsCount": 64000,
         "beforeCpuTokens": 0,
         "inCpuTokens": 1000,
-        "warmupIterations": 5,
-        "measurementIterations": 5,
-        "forks": 2,
+        "warmupIterations": 7,
+        "measurementIterations": 7,
+        "forks": 3,
         "yieldsBefore": 1,
         "yieldInCrit": true,
         "title": "ConsumeCPU. High contention.",
         "skip": false,
         "locks": [
           {
-            "name": "NUMA_MCS_QSPIN"
+            "name": "NUMA_MCS_NO_CONTENDED"
           },
           {
-            "name": "UNFAIR_REENTRANT"
-          },
-          {
-            "name": "FAIR_REENTRANT"
-          },
-          {
-            "name": "NUMA_MCS_QUEUE"
+            "name": "NUMA_MCS_CONTENDED_ALL_FIELDS"
           }
         ]
       }
@@ -36,25 +30,19 @@
         "beforeCpuTokens": 128000,
         "inCpuTokens": 1000,
         "threadsFrom": 4,
-        "warmupIterations": 5,
-        "measurementIterations": 5,
-        "forks": 2,
+        "warmupIterations": 7,
+        "measurementIterations": 7,
+        "forks": 3,
         "yieldsBefore": 2,
         "title": "ConsumeCPU. Low contention.",
         "yieldInCrit": true,
         "skip": false,
         "locks": [
           {
-            "name": "NUMA_MCS_QSPIN"
+            "name": "NUMA_MCS_NO_CONTENDED"
           },
           {
-            "name": "UNFAIR_REENTRANT"
-          },
-          {
-            "name": "FAIR_REENTRANT"
-          },
-          {
-            "name": "NUMA_MCS_QUEUE"
+            "name": "NUMA_MCS_CONTENDED_ALL_FIELDS"
           }
         ]
       }
@@ -66,16 +54,13 @@
         "measurementIterations": 7,
         "forks": 3,
         "title": "Text statistics.",
-        "skip": true,
+        "skip": false,
         "locks": [
           {
-            "name": "NUMA_MCS"
+            "name": "NUMA_MCS_NO_CONTENDED"
           },
           {
-            "name": "UNFAIR_REENTRANT"
-          },
-          {
-            "name": "FAIR_REENTRANT"
+            "name": "NUMA_MCS_CONTENDED_ALL_FIELDS"
           }
         ]
       }
